# liberdom

./: .gitignore  LICENSE  README.md  index.html  liberdom.py  script.js  style.css  telegram_bot.py
.github/workflows/: android.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/neoturcios/liberdom/: MainActivity.kt
android/app/src/main/kotlin/openfind/ai/: MainActivity.kt  OpenFindApp.kt
android/app/src/main/kotlin/openfind/ai/common/: Constants.kt  Extensions.kt  PdfExporter.kt
android/app/src/main/kotlin/openfind/ai/di/: AppModule.kt
android/app/src/main/kotlin/openfind/ai/viewmodel/: BulkViewModel.kt  GeneratorViewModel.kt  (+4 more)
android/app/src/main/res/drawable/: card_background_available.xml  card_background_default.xml  card_background_taken.xml  card_background_unknown.xml  flag_es.xml  flag_us.xml  glass_capsule_background.xml  ic_bulk.xml  ic_copy.xml  ic_generator.xml  ic_history.xml  ic_launcher.xml  ic_pdf.xml  ic_search.xml  ic_share.xml  ic_star.xml  ic_star_border.xml  search_button_background.xml  search_input_background.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-es/: strings.xml
android/openfind-core/: Cargo.toml
android/openfind-core/src/: brand_eval.rs  dns.rs  error.rs  generator.rs  lib.rs  ssl_audit.rs  whois.rs
web/: app.py
web/static/: script.js  style.css
web/templates/: index.html
(+41 files in other folders)
