[package]
name = "openfind-core"
version = "1.0.0"
edition = "2021"
description = "OpenFind AI core engine — DNS, WHOIS, SSL, domain generation"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
nom = "7"
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
rustls-native-certs = "0.8"
webpki-roots = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
once_cell = "1"

[lib]
crate-type = ["cdylib"]
name = "openfind_core"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
